[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprite/tile010.png" type="Texture" id=2]
[ext_resource path="res://Sprite/tile009.png" type="Texture" id=3]
[ext_resource path="res://Sprite/tile011.png" type="Texture" id=4]
[ext_resource path="res://Sprite/tile002.png" type="Texture" id=5]
[ext_resource path="res://Sprite/tile012.png" type="Texture" id=6]
[ext_resource path="res://Sprite/tile013.png" type="Texture" id=7]
[ext_resource path="res://Sprite/tile014.png" type="Texture" id=8]
[ext_resource path="res://Sprite/tile015.png" type="Texture" id=9]
[ext_resource path="res://Sprite/fuego dique hahha/Por ahora fuego.png" type="Texture" id=10]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 7.50659
height = 9.19934

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "lado",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "espalda",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=3]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=4]

flags = 4
gradient = SubResource( 3 )
width = 2048

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.5
scale_random = 0.0
color_ramp = SubResource( 4 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color" ]

[node name="Player" type="Area2D" index="0"]

position = Vector2( 254.43, 195.508 )
scale = Vector2( 1.6523, 1.89437 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
Velocidad = 400
speed = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="sprite_player" type="AnimatedSprite" parent="." index="1"]

scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "frente"
playing = true
_sections_unfolded = [ "Transform" ]

[node name="ParticulasFuego" type="Particles2D" parent="." index="2"]

show_behind_parent = true
position = Vector2( 0, 5 )
emitting = true
amount = 29
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 5 )
texture = ExtResource( 10 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Time", "Transform" ]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]


